modify page-tnli text & fix layout bug

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -8882,7 +8882,7 @@ ul.list-style li {
 }
 @media (max-width: 767.98px) {
   .plan-group .list-number {
-    margin: 0 4rem 4rem 0;
+    margin: 0 3.5rem 4rem 0;
   }
 }
 .plan-group .list-number::after {
@@ -8897,7 +8897,9 @@ ul.list-style li {
 }
 @media (max-width: 767.98px) {
   .plan-group .list-number::after {
-    width: 120px;
+    bottom: -5px;
+    left: -5px;
+    width: 100px;
   }
 }
 .plan-group .list-number .point {
