--- a/stylesheets/layout/_page.scss
+++ b/stylesheets/layout/_page.scss
@@ -92,7 +92,7 @@ ul.list-style li{
         position: relative;
         margin: 0 5rem 3.5rem 0;
         @include media-breakpoint-down(md){
-            margin: 0 4rem 4rem 0;
+            margin: 0 3.5rem 4rem 0;
         }
         &::after{
             content: "";
@@ -104,7 +104,9 @@ ul.list-style li{
             background-color: $gray-600;
             transform: rotate(-45deg);
             @include media-breakpoint-down(md){
-                width: 120px;
+                bottom: -5px;
+                left: -5px;
+                width: 100px;
             }
         }
         .point{
